--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        const apiUrl = 'https://qomusiyai.onrender.com/api/chat';
+        const apiUrl = 'https://qomusiyAI.onrender.com/api/chat';
 
 
         async function sendMessage() {
