--- a/public/index.html
+++ b/public/index.html
@@ -102,8 +102,9 @@
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify({
-                        contents: [{ parts: [{ text: userInput }] }]
+                        message: userInput
                     })
+
                 });
 
                 if (!response.ok) throw new Error('API request failed');
