--- a/public/index.html
+++ b/public/index.html
@@ -82,58 +82,53 @@
 
 
         async function sendMessage() {
-            const userInput = document.getElementById('user-input').value;
-            if (!userInput.trim()) return;
+    const userInput = document.getElementById('user-input').value;
+    if (!userInput.trim()) return;
 
-            // Display user message
-            const chatBox = document.getElementById('chat-box');
-            const userMessage = document.createElement('div');
-            userMessage.className = 'message user-message';
-            userMessage.textContent = userInput;
-            chatBox.appendChild(userMessage);
-            chatBox.scrollTop = chatBox.scrollHeight;
+    const chatBox = document.getElementById('chat-box');
+    const userMessage = document.createElement('div');
+    userMessage.className = 'message user-message';
+    userMessage.textContent = userInput;
+    chatBox.appendChild(userMessage);
+    chatBox.scrollTop = chatBox.scrollHeight;
 
-            // Clear input
-            document.getElementById('user-input').value = '';
+    document.getElementById('user-input').value = '';
 
-            // Send request to Gemini API
-            try {
-                const response = await fetch(apiUrl, {
-                    method: 'POST',
-                    headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({
-                        message: userInput
-                    })
+    try {
+        const response = await fetch('https://qomusiyai.onrender.com/api/chat', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify({ message: userInput })
+        });
 
-                });
-
-                if (!response.ok) throw new Error('API request failed');
-
-                const data = await response.json();
-                const aiResponse = data.candidates[0].content.parts[0].text;
-
-                // Display AI response
-                const aiMessage = document.createElement('div');
-                aiMessage.className = 'message ai-message';
-
-                aiMessage.innerHTML = marked.parse(aiResponse);
-
-                chatBox.appendChild(aiMessage);
-                chatBox.scrollTop = chatBox.scrollHeight;
-
-                document.querySelectorAll('pre code').forEach((block) => {
-                hljs.highlightElement(block);
-                });
-
-            } catch (error) {
-                console.error('Error:', error);
-                const errorMessage = document.createElement('div');
-                errorMessage.className = 'message ai-message';
-                errorMessage.textContent = 'Error: Unable to get response from AI.';
-                chatBox.appendChild(errorMessage);
-                chatBox.scrollTop = chatBox.scrollHeight;
-            }
+        if (!response.ok) {
+            throw new Error(`API request failed: ${response.status}`);
         }
+
+        const data = await response.json();
+        const aiResponse = data.text;
+
+        const aiMessage = document.createElement('div');
+        aiMessage.className = 'message ai-message';
+        aiMessage.innerHTML = marked.parse(aiResponse);
+        chatBox.appendChild(aiMessage);
+        chatBox.scrollTop = chatBox.scrollHeight;
+
+        document.querySelectorAll('pre code').forEach((block) => {
+            hljs.highlightElement(block);
+        });
+
+    } catch (error) {
+        console.error('Error:', error);
+        const errorMessage = document.createElement('div');
+        errorMessage.className = 'message ai-message';
+        errorMessage.textContent = 'Error: Unable to get response from AI.';
+        chatBox.appendChild(errorMessage);
+        chatBox.scrollTop = chatBox.scrollHeight;
+    }
+}
 
         // Allow sending message with Enter key
         document.getElementById('user-input').addEventListener('keypress', (e) => {
