--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gemini AI Webchat</title>
+    <title>qomusiyAI Webchat</title>
+    <link rel="icon" type="image/png" href="https://static.thenounproject.com/png/sparkle-icon-7753152-512.png">   
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
@@ -19,7 +20,8 @@
         .dark .user-message { background: #2c2c2c; color: #ffffff;  }
         .dark .ai-message { color: #ffffff; }
         .dark #input-container { background: #1a1a1a; }
-        .dark #user-input { background: #2c2c2c; color: #e9ecef; border-color: #3a3a3a; }
+        .dark #user-input { background: #2c2c2c; color: #e9ecef; border-color: #3a3a3a;}
+        .dark #user-input::placeholder { color: #e9ecef!important;}
         .dark #theme-toggle { color: #fff!important; }
         .dark #theme-toggle2 { color: #fff!important; }
         #theme-toggle { cursor: pointer; background: none; border: none; padding: 0.5rem; border-radius: 50%; transition: background-color 0.3s; }
@@ -66,7 +68,7 @@
                     <div id="chat-box" class="position-relative"></div>
                     <div id="input-container">
                         <div class="d-flex gap-2">
-                            <input id="user-input" type="text" class="form-control custom-input" placeholder="Ask sweeti...">
+                            <input id="user-input" type="text" class="form-control custom-input" placeholder="Ask sweetie...">
                             <button onclick="sendMessage()" id="theme-toggle2"><i class="fa-solid fa-arrow-up"></i></button>
                         </div>
                     </div>
